added sections 5 and 7

--- a/hilfszettel.tex
+++ b/hilfszettel.tex
@@ -15,6 +15,7 @@
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{microtype}
 \usepackage{pdfpages}
+\usepackage{amsmath}
 
 \let\bar\overline
 
@@ -24,12 +25,15 @@
 %\footnotesize
 \small
 \begin{multicols*}{5}
-\input{inhalt/aussagen}
-\input{inhalt/mengen}
-\input{inhalt/relationen}
-\input{inhalt/abbildungen}
+\input{inhalt/1_probability_theory.tex}
+\input{inhalt/5_asymptotic_theory.tex}
+\input{inhalt/7_hypothesis_testing.tex}
+% \input{inhalt/aussagen}
+% \input{inhalt/mengen}
+% \input{inhalt/relationen}
+% \input{inhalt/abbildungen}
 %\input{inhalt/beweise} 
-\input{inhalt/graphen}
+%\input{inhalt/graphen}
 %\input{inhalt/graphalgo}
 %\input{inhalt/bool}
 %\input{inhalt/formeln}
