--- a/inhalt/def.tex
+++ b/inhalt/def.tex
@@ -27,8 +27,8 @@ leftmargin=0mm,rightmargin=0mm,skipbelow=0mm,skipabove=0mm,
 \begin{mdframed}[style=header]
 \footnotesize
 \sffamily
-Hilfszettel zur Klausur\\
-von~Tim~S.,~Seite~\thepage~von~2
+Econometrics Year 1 Cheat-sheet\\
+~Julian~Budde,~Page~\thepage~of~2
 \end{mdframed}
 }
 
