--- a/cheat-sheet.tex
+++ b/cheat-sheet.tex
@@ -19,23 +19,24 @@
 
 \let\bar\overline
 
-\include{inhalt/def}
+\include{content/def}
 
 \begin{document}
 %\footnotesize
 \small
 \begin{multicols*}{5}
-\input{inhalt/1_probability_theory.tex}
-\input{inhalt/5_asymptotic_theory.tex}
-\input{inhalt/7_hypothesis_testing.tex}
-% \input{inhalt/aussagen}
-% \input{inhalt/mengen}
-% \input{inhalt/relationen}
-% \input{inhalt/abbildungen}
-%\input{inhalt/beweise} 
-%\input{inhalt/graphen}
-%\input{inhalt/graphalgo}
-%\input{inhalt/bool}
-%\input{inhalt/formeln}
+\input{content/1_probability_theory.tex}
+\input{content/5_asymptotic_theory.tex}
+\input{content/6_ml_estimation.tex}
+\input{content/7_hypothesis_testing.tex}
+% \input{content/aussagen}
+% \input{content/mengen}
+% \input{content/relationen}
+% \input{content/abbildungen}
+%\input{content/beweise} 
+%\input{content/graphen}
+%\input{content/graphalgo}
+%\input{content/bool}
+%\input{content/formeln}
 \end{multicols*}
 \end{document}
