--- a/content/5_asymptotic_theory.tex
+++ b/content/5_asymptotic_theory.tex
@@ -34,7 +34,7 @@
 Implication: Sums and products of convergent sequences converge. Does \emph{not} hold for \emph{mean square} convergence.\\
 \textbf{Thm 5.12 (Slutzky's)}: $X_n$, $Y_n$ seq of rvs with $X_n\xrightarrow{d} X$ and $Y_n\xrightarrow{p} c\in \mathbb{R}$, then $X_n + Y_n \xrightarrow{d} X + c$ and $X_nY_n\xrightarrow{d}cX$, and if $c\neq0$, $X_n/Y_n \xrightarrow{d} X/c$. \\
 \textbf{Extension to rvecs}: $\textbf{X}_n \xrightarrow{d} \textbf{X}$ and $\textbf{Y}_n\xrightarrow{p}\textbf{C}\in\mathbb{R}^{K\times K}$, $\textbf{C}$ invertible, then $\textbf{Y}_n^{-1}\textbf{X}_n\xrightarrow{d}\textbf{C}^{-1}\textbf{X}$. \\
-\textbf{Example CMT}: $\left(\frac{\sqrt{n}(\bar{X}_n - \mu)}{\sigma}\right)^2 \xrightarrow{d} N(0,1)^2 = \xi_1^2$.\\
+\textbf{Example CMT}: $\left(\frac{\sqrt{n}(\bar{X}_n - \mu)}{\sigma}\right)^2 \xrightarrow{d} N(0,1)^2 = \chi_1^2$.\\
 \textbf{Thm 5.13 (Delta-Method)}: $X_n$ seq of rvs with LL-CLT applying. $g:\mathbb{R}\to\mathbb{R}$ \emph{continuously diff.} at $\mu$ with $g'(\mu)\neq0$. Then $\sqrt{n}(g(X_n)-g(\mu)) \xrightarrow{d} N(0, g'(\mu)^2\sigma^2)$. Proof: CMT and Slutzky's applied to Taylor's/intermediate value theorem. 
 
 \subsection{Interval Estimation}
