--- a/cheat-sheet.tex
+++ b/cheat-sheet.tex
@@ -23,12 +23,16 @@
 
 \begin{document}
 %\footnotesize
-\small
+\footnotesize
 \begin{multicols*}{5}
 \input{content/1_probability_theory.tex}
+\input{content/2_random_variables.tex}
+\input{content/3_multivariate_distributions.tex}
+\input{content/4_sampling.tex}
 \input{content/5_asymptotic_theory.tex}
 \input{content/6_ml_estimation.tex}
 \input{content/7_hypothesis_testing.tex}
+\input{content/0_common_distributions.tex}
 % \input{content/aussagen}
 % \input{content/mengen}
 % \input{content/relationen}
