--- a/content/2_random_variables.tex
+++ b/content/2_random_variables.tex
@@ -1,4 +1,4 @@
 \section{Random Variables}
 \textbf{Thm 2.5 (Jensen's inequalities)}: Suppose $g(x)$ convex, then $E(g(X)) \geq g(E(X))$ if existent. Strict unless $X$ degenerate or $g$ linear.\\
 \textbf{Def 2.10 (MGF)}: $X\sim F_X$, $t\in\mathbb{R}$. Then $M_X(t) = E(e^{tX})$ given it exists in some neighborhood of 0.\\
-\textbf{Thm 2.7}: If $M_X(t)$ exists, then $E(X^n) = \frac{\partial^n}{\partial t^n}M_X(0)$. Derive by writing out (continuous).
+\textbf{Thm 2.7}: If $M_X(t)$ exists, then $E(X^n) = \frac{\partial^n}{\partial t^n}M_X(0)$. % Derive by writing out (continuous).\\
