--- a/content/4_sampling.tex
+++ b/content/4_sampling.tex
@@ -1,1 +1,3 @@
 \section{Sampling}
+\subsection{Distribution of the t-ratio}
+With $\{X_i\}_{i=1}^\infty$ rs of $X_i\sim N(\mu, \sigma^2)$ we have $\frac{\sqrt{n}(\bar{X}_n-\mu)}{\sigma/} \sim N(0,1)$. Then the \textit{t-ratio} $\frac{\bar{X}_n-\mu}{\frac{1}{\sqrt{n}}S_n} = \frac{\frac{\bar{X}_n-\mu}{\sigma/\sqrt{n}}}{\sqrt{S_n^2/\sigma^2}}\sim t_{n-1}$.\\
