--- a/content/1_probability_theory.tex
+++ b/content/1_probability_theory.tex
@@ -2,7 +2,7 @@
 \textbf{Thm 1.3 (LTP)}: $A_1, ..., A_2$ partition of $S$ and $B\subset S$, then $P(B) = \sum_{i=1}^\infty P(B|A_i)P(A_i)$.\\
 \textbf{Thm 1.4(Bayes' rule)}: $A_1, A_2, \ldots$ partition of $S$, $B$ any set. Then for each $i=1,2,\ldots$, $P(A_i|B) = \frac{P(B|A_i)P(A_i)}{\sum_{i=1}^\infty P(B|A_i)P(A_i)}$.\\
 \textbf{Def. 1.5 (Sigma Algebra)}: Collection of subsets of S is a \textit{sigma algebra} $\mathcal{B}$ if it satisfies: (1) $\emptyset\in\mathcal{B}$, (2) If $A\in\mathcal{B}$, then $A^c\in\mathcal{B}$, and (3) if $A_1, A_2, \ldots \in\mathcal{B}$ then $\cup_{i=1}^\infty A_i\in\mathcal{B}$.\\
-\textbf{Def 1.8 (Independence)}: $A, B$ independent $\Leftrightarrow$ $P(A\cap B) = P(A)P(B)$.\\
-\textbf{Thm 1.5}: $A, B$ independent $\Rightarrow$ pairs $A,B$ and $A^c,B$ and $A^c,B$ are each independent.\\
-\textbf{Def 1.9 (Mutual independence)}: For any subcollection $A_{i_1}, \ldots, A_{i_k}$ we have $P\left(\cap_{j=1}^kA_{i_j}\right) = \prod_{j=1}^kP(A_{i_j})$. Independence requires \textit{all} possible subcollections independent.\\
+%\textbf{Def 1.8 (Independence)}: $A, B$ independent $\Leftrightarrow$ $P(A\cap B) = P(A)P(B)$.\\
+%\textbf{Thm 1.5}: $A, B$ independent $\Rightarrow$ pairs $A,B$ and $A^c,B$ and $A^c,B$ are each independent.\\
+%\textbf{Def 1.9 (Mutual independence)}: For any subcollection $A_{i_1}, \ldots, A_{i_k}$ we have $P\left(\cap_{j=1}^kA_{i_j}\right) = \prod_{j=1}^kP(A_{i_j})$. Independence requires \textit{all} possible subcollections independent.\\
 \textit{Mutual independence} $\Rightarrow$ \textit{pairwise independence}, but not $\Leftarrow$.
