--- a/content/0_common_distributions.tex
+++ b/content/0_common_distributions.tex
@@ -19,3 +19,4 @@
 % Chi-square
 % t-Distribution, Cauchy
 \textbf{Cauchy}: $X, Y \sim N(0, 1)$ with $X\independent Y$, then $\frac{X}{Y}~Cauchy(0,1)$. Expectation and variance undefined. $X\sim Cauchy(0,1)$ then $X\sim t_1$.
+\vfill
