--- a/cheat-sheet.tex
+++ b/cheat-sheet.tex
@@ -17,6 +17,9 @@
 \usepackage{pdfpages}
 \usepackage{amsmath}
 
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
+
 \let\bar\overline
 
 \include{content/def}
@@ -32,7 +35,9 @@
 \input{content/5_asymptotic_theory.tex}
 \input{content/6_ml_estimation.tex}
 \input{content/7_hypothesis_testing.tex}
+\input{content/8_regression_casusality_identification.tex}
 \input{content/0_common_distributions.tex}
+\input{content/9_least_squares.tex}
 % \input{content/aussagen}
 % \input{content/mengen}
 % \input{content/relationen}
